@@ -3253,6 +3253,14 @@ for f in $EVERY_INCLUDES_C $EVERY_INCLUDES_H ; do
 done
 echotab "CLISP=\"${CLISP_}\" ; cd \$@ ; dots="'`'"echo \$@/ | sed -e 's,[^/][^/]*//*,../,g' -e 's,/\$\$,,g'"'`'" ; \$(MAKE) clisp-module CC=\"\$(CC)\" CPPFLAGS=\"\$(${MODULE_CPPFLAGS_VAR})\" CFLAGS=\"\$(${MODULE_CFLAGS_VAR})\" INCLUDES=\"\$\$dots\" LISPBIBL_INCLUDES=\"$EVERY_INCLUDES_DOTS_C\" CLFLAGS=\"\$(${MODULE_CLFLAGS_VAR})\" LIBS=\"\$(LIBS)\" RANLIB=\"\$(RANLIB)\" CLISP=\"\$\$CLISP -q\""
 echol
+
+# make sure no cygwin libraries creeped into the mingw distribution
+cygwin_check() {
+  if [ "$host_os" = cygwin -a "${TSYS}" = win32gcc ]; then
+    echotab "cygcheck $1/lisp.exe | grep cyg && exit 1"
+  fi
+}
+
 echol "base : modular boot \$(BASE_MODULES)"
 echotab "\$(RMRF) base"
 echotab "CLISP_LINKKIT=. ${HERE}clisp-link add-module-sets boot base \$(BASE_MODULES) || (\$(RMRF) base ; exit 1)"
@@ -3260,10 +3268,12 @@ echol
 echol "full : modular base \$(MODULES)"
 echotab "\$(RMRF) full"
 echotab "CLISP_LINKKIT=. ${HERE}clisp-link add-module-sets base full \$(MODULES) || (\$(RMRF) full ; exit 1)"
+cygwin_check base
 echol
 echol "full-check : full clisp"
 echotab 'for m in $(MODULES); do $(RM) $$m/*.erg; done'
 echotab 'z=""; for m in $(MODULES); do z=$$z" \""$$m/\"; done; ./clisp -K full '"${someflags} -C -i ${TESTSDIR}/tests"' -x "(run-some-tests '"'"'($$z))"'
+cygwin_check full
 echol
 OBSOLETE=$OBSOLETE" genclisph${HEXE}"
 
